--- a/algorithms/graphs/src/CMakeLists.txt
+++ b/algorithms/graphs/src/CMakeLists.txt
@@ -1,4 +1,5 @@
 list(APPEND SOURCE_LIST "${PROJECT_SOURCE_DIR}/src/graph.cpp")
+list(APPEND SOURCE_LIST "${PROJECT_SOURCE_DIR}/src/bfs.cpp")
 # ^^^ APPEND NEW SOURCE FILES TO THE SOURCE_LIST
 
 # Make an automatic library - will be static or dynamic based on user setting
