--- a/algorithms/graphlib/CMakeLists.txt
+++ b/algorithms/graphlib/CMakeLists.txt
@@ -2,6 +2,17 @@ cmake_minimum_required(VERSION 3.14)
 
 project(graphlib LANGUAGES CXX)
 
+# set build type to Debug
+set(default_build_type "Debug")
+if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
+    message(STATUS "Setting build type to '${default_build_type}' as none was specified.")
+    set(CMAKE_BUILD_TYPE "${default_build_type}" CACHE
+        STRING "Choose the type of build." FORCE)
+    # Retain possible values of build type for cmake-gui.
+    set_property(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS
+    "Debug" "Release" "MinSizeRel" "RelWithDebInfo")
+endif()
+
 # ccache
 find_program(CCACHE_PROGRAM ccache)
 if(CCACHE_PROGRAM)
