--- a/algorithms/graphlib/examples/CMakeLists.txt
+++ b/algorithms/graphlib/examples/CMakeLists.txt
@@ -11,4 +11,5 @@ endmacro()
 package_add_example(init_test init_test.cpp)
 package_add_example(bfs_test bfs_test.cpp)
 package_add_example(dfs_test dfs_test.cpp)
+package_add_example(mst_test mst_test.cpp)
 # ^^^ ADD MORE EXAMPLE EXECUTABLES HERE ^^^
