--- a/algorithms/graphlib/examples/CMakeLists.txt
+++ b/algorithms/graphlib/examples/CMakeLists.txt
@@ -12,4 +12,5 @@ package_add_example(init_test init_test.cpp)
 package_add_example(bfs_test bfs_test.cpp)
 package_add_example(dfs_test dfs_test.cpp)
 package_add_example(mst_test mst_test.cpp)
+package_add_example(weighted_paths_test weighted_paths_test.cpp)
 # ^^^ ADD MORE EXAMPLE EXECUTABLES HERE ^^^
