--- a/algorithms/graphlib/src/CMakeLists.txt
+++ b/algorithms/graphlib/src/CMakeLists.txt
@@ -2,6 +2,7 @@ list(APPEND SOURCE_LIST "${PROJECT_SOURCE_DIR}/src/graph.cpp")
 list(APPEND SOURCE_LIST "${PROJECT_SOURCE_DIR}/src/bfs.cpp")
 list(APPEND SOURCE_LIST "${PROJECT_SOURCE_DIR}/src/dfs.cpp")
 list(APPEND SOURCE_LIST "${PROJECT_SOURCE_DIR}/src/mst.cpp")
+list(APPEND SOURCE_LIST "${PROJECT_SOURCE_DIR}/src/weighted_paths.cpp")
 # ^^^ APPEND NEW SOURCE FILES TO THE SOURCE_LIST
 
 # Make an automatic library - will be static or dynamic based on user setting
