--- a/algorithms/graphlib/examples/CMakeLists.txt
+++ b/algorithms/graphlib/examples/CMakeLists.txt
@@ -8,9 +8,9 @@ macro(package_add_example EXAMPLENAME)
   target_link_libraries(${EXAMPLENAME} PRIVATE graphlib)
 endmacro()
 
-package_add_example(init_test init_test.cpp)
-package_add_example(bfs_test bfs_test.cpp)
-package_add_example(dfs_test dfs_test.cpp)
-package_add_example(mst_test mst_test.cpp)
-package_add_example(weighted_paths_test weighted_paths_test.cpp)
+package_add_example(core_test core_test.cpp)
+package_add_example(bfs_test algo/bfs_test.cpp)
+package_add_example(dfs_test algo/dfs_test.cpp)
+package_add_example(mst_test algo/mst_test.cpp)
+package_add_example(weighted_paths_test algo/weighted_paths_test.cpp)
 # ^^^ ADD MORE EXAMPLE EXECUTABLES HERE ^^^
