--- a/algorithms/graphlib/src/graphlib/CMakeLists.txt
+++ b/algorithms/graphlib/src/graphlib/CMakeLists.txt
@@ -1,8 +1,8 @@
-list(APPEND SOURCE_LIST "${PROJECT_SOURCE_DIR}/src/graph.cpp")
-list(APPEND SOURCE_LIST "${PROJECT_SOURCE_DIR}/src/bfs.cpp")
-list(APPEND SOURCE_LIST "${PROJECT_SOURCE_DIR}/src/dfs.cpp")
-list(APPEND SOURCE_LIST "${PROJECT_SOURCE_DIR}/src/mst.cpp")
-list(APPEND SOURCE_LIST "${PROJECT_SOURCE_DIR}/src/weighted_paths.cpp")
+list(APPEND SOURCE_LIST "${PROJECT_SOURCE_DIR}/src/graphlib/graph.cpp")
+list(APPEND SOURCE_LIST "${PROJECT_SOURCE_DIR}/src/graphlib/algo/bfs.cpp")
+list(APPEND SOURCE_LIST "${PROJECT_SOURCE_DIR}/src/graphlib/algo/dfs.cpp")
+list(APPEND SOURCE_LIST "${PROJECT_SOURCE_DIR}/src/graphlib/algo/mst.cpp")
+list(APPEND SOURCE_LIST "${PROJECT_SOURCE_DIR}/src/graphlib/algo/weighted_paths.cpp")
 # ^^^ APPEND NEW SOURCE FILES TO THE SOURCE_LIST
 
 # Make an automatic library - will be static or dynamic based on user setting
