complete migration with graph_2d!

--- a/algorithms/graphlib/examples/CMakeLists.txt
+++ b/algorithms/graphlib/examples/CMakeLists.txt
@@ -10,7 +10,7 @@ endmacro()
 
 package_add_example(core_test core_test.cpp)
 
-# package_add_example(graph_2d_test geometry/graph_2d_test.cpp)
+package_add_example(graph_2d_test geometry/graph_2d_test.cpp)
 
 package_add_example(bfs_test algo/bfs_test.cpp)
 package_add_example(dfs_test algo/dfs_test.cpp)
