--- a/algorithms/graphlib/src/graphlib/CMakeLists.txt
+++ b/algorithms/graphlib/src/graphlib/CMakeLists.txt
@@ -16,6 +16,7 @@ target_include_directories(graphlib PUBLIC ${PROJECT_SOURCE_DIR}/src)
 
 # All users of this library will need at least C++14
 target_compile_features(graphlib PUBLIC cxx_std_14)
+set_target_properties(graphlib PROPERTIES CXX_EXTENSIONS OFF)
 
 # Compiler flags
 target_compile_options(graphlib PRIVATE "-fPIC" "-Wall")
